feat(calculator): add new endpoint call

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,13 +1,7 @@
 <div *ngIf="visible$ | async" class="footer" fxLayout="row">
-  <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="24px" fxFlex="grow">
-    <a href="https://1.envato.market/LPZQEV"
-       class="action" color="accent" fxFlex="none" id="get-fury" mat-raised-button>
-      <mat-icon class="icon">shopping_cart</mat-icon>
-      Buy Fury (Angular 16+)
-    </a>
-
-    <div class="name" fxHide fxShow.gt-sm>
-      Fury - Angular 16+ Material Design Admin Template - Save 100s of hours designing and coding
+  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="24px" fxFlex="grow">
+    <div class="name">
+      <span class="brand-name">BetsKing</span> — Detecta oportunidades de surebets y optimiza tus apuestas con datos en tiempo real.
     </div>
   </div>
   <div fxLayout="row" fxLayoutAlign="start center">
