--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -79,10 +79,19 @@
     height: 72px;
     width: 72px;
     border-radius: 50%;
+    border: 2px solid white;
+  }
+
+  .sidenav-user-name {
+    color: #FFD700;
+    margin-bottom: 0;
+    margin-top: 8px;
   }
 
   .sidenav-user-email {
+    color: #FFD700;
     margin-top: 0;
+    margin-bottom: 8px;
   }
 
   .sidenav-user-icons {
