--- a/src/app/pages/users/user-create-update/user-create-update.component.html
+++ b/src/app/pages/users/user-create-update/user-create-update.component.html
@@ -73,6 +73,16 @@
       </mat-form-field>
     </div>
 
+    <div fxLayout="column">
+      <mat-form-field fxFlex>
+        <mat-label>Activo Hasta</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="activeUntil" placeholder="Seleccione fecha">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+        <mat-hint>Fecha límite de activación del usuario</mat-hint>
+      </mat-form-field>
+    </div>
+
   </mat-dialog-content>
   <mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
     <button type="button" mat-button mat-dialog-close>CANCELAR</button>
