--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -36,19 +36,24 @@
           <ng-container *ngIf="column.isModelProperty" [matColumnDef]="column.property">
             <th *matHeaderCellDef mat-header-cell mat-sort-header> {{ column.name }}</th>
             <td *matCellDef="let row" mat-cell>
-              <span *ngIf="column.property !== 'active' && column.property !== 'gender' && column.property !== 'role'">
+              <span *ngIf="column.property !== 'active' && column.property !== 'gender' && column.property !== 'role' && column.property !== 'activeUntil'">
                 {{ row[column.property] }}
               </span>
-              <span *ngIf="column.property === 'active'">
-                <mat-chip [class.active-chip]="row.active" [class.inactive-chip]="!row.active">
-                  {{ getStatusLabel(row.active) }}
-                </mat-chip>
+              <span *ngIf="column.property === 'active'" (click)="$event.stopPropagation()">
+                <mat-slide-toggle 
+                  [checked]="row.active" 
+                  (change)="toggleUserStatus(row, $event.checked)"
+                  [color]="row.active ? 'primary' : 'warn'">
+                </mat-slide-toggle>
               </span>
               <span *ngIf="column.property === 'gender'">
                 {{ row[column.property] | titlecase }}
               </span>
               <span *ngIf="column.property === 'role'">
                 {{ row[column.property] | titlecase }}
+              </span>
+              <span *ngIf="column.property === 'activeUntil'">
+                {{ formatDate(row.activeUntil) }}
               </span>
             </td>
           </ng-container>
