feat(push): add notification push implementation

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   </li>
 </ul>
 
-<button mat-raised-button color="warn" (click)="logout()">Logout</button>
+<button mat-raised-button color="accent" (click)="testPushNotification()">Test Push Server</button>
 <button mat-raised-button color="primary" (click)="testNotification()">Test Notification</button>
 
 <fury-page [fxLayoutGap]="gap" class="dashboard" fxLayout="column">
