--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -74,6 +74,9 @@
               <button (click)="resetPassword(row)" mat-menu-item>
                 <span>Restablecer Contraseña</span>
               </button>
+              <button (click)="forceLogoutUser(row)" mat-menu-item>
+                <span>Forzar Logout</span>
+              </button>
               <button (click)="deleteUser(row)" mat-menu-item>
                 <span>Eliminar</span>
               </button>
