--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -2,6 +2,15 @@
   display: block;
 }
 
+.actions {
+  display: flex;
+  gap: 8px;
+  
+  .refresh {
+    margin-right: 8px;
+  }
+}
+
 .active-chip {
   background-color: #4caf50 !important;
   color: white !important;
