--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -30,10 +30,17 @@
 
   .sidenav-toolbar-icon {
     vertical-align: text-top;
+    transition: opacity 0.3s, width 0.3s;
 
     img {
       height: 45px;
       width: auto;
+    }
+
+    &.hidden {
+      opacity: 0;
+      width: 0;
+      overflow: hidden;
     }
   }
 
@@ -43,10 +50,23 @@
     margin-left: -10px;
     margin-bottom: -5px;
 
+    &.centered {
+      margin-left: 0;
+      text-align: center;
+      width: 100%;
+    }
+
     .logo-text {
       font-family: 'Offenbacher', sans-serif;
       font-size: 36px;
       line-height: 36px;
+    }
+
+    .logo-text-short {
+      font-family: 'Offenbacher', sans-serif;
+      font-size: 32px;
+      line-height: 36px;
+      display: block;
     }
   }
 }
@@ -54,11 +74,11 @@
 .sidenav-toolbar-collapse-toggle {
   transition: transform .25s;
 
-  .sidenav-toolbar-collapse-icon {
-    width: 12px;
-    height: 12px;
-    font-size: 12px;
-    line-height: 12px;
+  mat-icon {
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   &.rotate {
@@ -118,4 +138,36 @@
 
 .sidenav-items {
   min-height: 0;
+}
+
+.sidenav-config-button {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 8px;
+
+  button {
+    width: 100%;
+    padding: 12px 16px;
+    color: #FFD700;
+    transition: background-color 0.2s;
+
+    &:hover {
+      background-color: rgba(255, 215, 0, 0.1);
+    }
+
+    mat-icon {
+      margin-right: 12px;
+    }
+
+    &.collapsed {
+      justify-content: center;
+
+      mat-icon {
+        margin-right: 0;
+      }
+    }
+
+    .sidenav-config-text {
+      font-size: 14px;
+    }
+  }
 }
